--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "react-ts",
+  "name": "react",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@firebase/app": "0.6.29",
+    "@popperjs/core": "2.9.3",
+    "bootstrap": "5.1.0",
+    "firebase": "8.9.1",
+    "qrcode": "1.4.4",
+    "react": "17.0.2",
+    "react-copy-to-clipboard": "5.0.4",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-icons": "4.2.0",
+    "react-native": "0.65.0",
+    "webfontloader": "1.6.28",
+    "reactfire": "3.0.0-rc.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts-ts": "latest"
+    "react-scripts": "latest"
   }
 }
