--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "0.6.29",
-    "@popperjs/core": "2.9.3",
-    "bootstrap": "5.1.0",
-    "firebase": "8.9.1",
-    "qrcode": "1.4.4",
-    "react": "17.0.2",
-    "react-copy-to-clipboard": "5.0.4",
-    "react-dom": "17.0.2",
-    "react-helmet": "6.1.0",
-    "react-icons": "4.2.0",
-    "react-native": "0.65.0",
-    "webfontloader": "1.6.28",
-    "reactfire": "3.0.0-rc.3"
+    "@firebase/app": "^0.7.11",
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.1",
+    "qrcode": "^1.5.0",
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-native": "^0.66.4",
+    "reactfire": "^4.2.1",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
